Taking care of short spaces for long texts in cards. When the texts in the cards are too long, they would show over the card next to it. That was solved by a CSS overflow: hidden property, but the texts shouldn't be clunky at all, so I changed the amount of space available to each card to optimize it to 1024x768 screens (288px for each card, because of the margins). Space should be sufficient for most cases, if such is not the case, then the cards won't overflow to others.

--- a/source/CommonJobs/CommonJobs.MVC.UI/Content/Employees.less
+++ b/source/CommonJobs/CommonJobs.MVC.UI/Content/Employees.less
@@ -7,6 +7,7 @@
     height: 100px;
     .rounded_corners(10px);
 	cursor: pointer;
+	overflow: hidden;
 }
 
 .cardPicture 
@@ -20,7 +21,6 @@
 .cardDescription 
 {
     margin-left: 62px;
-    min-width: 150px;
 
 	p
     {
@@ -55,7 +55,7 @@
 /*from http://designshack.net/articles/css/beating-borders-the-bane-of-responsive-layout/ */
 .column 
 {
-    min-width: 200px;
+    min-width: 288px;
 	width: 15.5%;
 	float: left;
 	margin: 1em 0.5% 0 0.5%;
